recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:6: error: not found: value squareSide
		squareSide(levels-1,length*0.4)
                ^PentaKoch:8: error: not found: value squareSide
		squareSide(levels-1,length*0.4)
                ^PentaKoch:10: error: not found: value squareSide
		squareSide(levels-1,length*0.4)
                ^PentaKoch:11: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
		droite()
                      ^PentaKoch:12: error: not found: value squareSide
		squareSide(levels-1,length*0.4)
                ^PentaKoch:14: error: not found: value squareSide
		squareSide(levels-1,length*0.4)
                ^